--- a/templates/main.html
+++ b/templates/main.html
@@ -6,36 +6,39 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js"></script>
     <script src='node_module/boundingbox/dist/boundingbox.js'></script>
-    <script src='index.js'></script>
+    
+    <script src='C:\Users\Msys\Desktop\IR\Project\index.js'></script>
     <style>
       #map {position: absolute; top:0; right: 0; bottom: 0; left: 0;}
     </style>
   </head>
   <body>
     <div id="cordinates" style=" float:right; position:relative; right:18px">
-    <form >
+    <form action="/api/v1/cordinates" methods =POST>
       <label for="minlat">Minlat</label></br>
-      <input id="minlatInput" type="number" step="0.0001"></b></br>
+      <input id="minlatInput" name="minlatInput" type="number" step="0.0001"></b></br>
 
       <label for="maxlat">Maxlat</label></br>
-      <input id="maxlatInput" type="number" step="0.0001"></br>
+      <input id="maxlatInput" name="maxlatInput" type="number" step="0.0001"></br>
 
       <label for="minlon">Minlon</label></br>
-      <input id="minlonInput" type="number" step="0.0001"></b></br>
+      <input id="minlonInput" name="minlonInput" type="number" step="0.0001"></b></br>
 
       <label for="maxlon">Maxlon</label></br>
-      <input id="maxlonInput" type="number" step="0.0001"></br>
+      <input id="maxlonInput" name="maxlonInput"  type="number" step="0.0001"></br>
 
-      <input onclick="fun()" type="submit" value="submit" step="0.0001">
-    </form>
+    </form> 
+    <button onclick="fun()">submit</button>
     
 
     </div>
     <div id="map" style="margin-right: 15%;">
 
-      <a href="https://www.maptiler.com" style="position:absolute;left:10px;bottom:10px;z-index:999;"><img src="https://api.maptiler.com/resources/logo.svg" alt="MapTiler logo"></a>
+      <a href="https://www.maptiler.com" style="position:absolute;left:10px;bottom:10px;z-index:999;">
+        <img src="https://api.maptiler.com/resources/logo.svg" alt="MapTiler logo"></a>
     </div>
-    <p><a href="https://www.maptiler.com/copyright/" target="_blank">&copy; MapTiler</a> <a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a></p>
+    <p><a href="https://www.maptiler.com/copyright/" target="_blank">&copy; MapTiler</a> 
+      <a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a></p>
     <script>
       var map = L.map('map').setView([0, 0], 2.5);
       L.tileLayer('https://api.maptiler.com/maps/streets/{z}/{x}/{y}.png?key=ZmpmM6Ih8mNcQBKHAfCK',{
@@ -45,7 +48,6 @@
         attribution: "\u003ca href=\"https://www.maptiler.com/copyright/\" target=\"_blank\"\u003e\u0026copy; MapTiler\u003c/a\u003e \u003ca href=\"https://www.openstreetmap.org/copyright\" target=\"_blank\"\u003e\u0026copy; OpenStreetMap contributors\u003c/a\u003e",
         crossOrigin: true
       }).addTo(map);
-
 
 
     </script>     
